--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="Yen-Chun Tseng's Personal Website" />
+  <meta name="description" content="Contact Yen-Chun Tseng" />
   <meta name="author" content="Yen-Chun Tseng" />
-  <title>Yen-Chun Tseng - DBA & Data Specialist</title>
+  <title>Contact - Yen-Chun Tseng</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
@@ -16,41 +16,43 @@
 <body>
   <header>
     <h1 class="site-heading text-center text-faded d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">DBA | Data Analysis | Machine Learning</span>
-      <span class="site-heading-lower">Yen-Chun Tseng</span>
+      <span class="site-heading-upper text-primary mb-3">Get In Touch</span>
+      <span class="site-heading-lower">Contact Yen-Chun Tseng</span>
     </h1>
   </header>
-  <!-- Navigation-->
+  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
       <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Yen-Chun Tseng</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
           <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="experience.html">Experience</a></li>
-          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Experience</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <!-- Intro Section-->
-  <section class="page-section clearfix">
+  <!-- Contact Section -->
+  <section class="page-section cta">
     <div class="container">
-      <div class="intro">
-        <!-- Replace the intro image with a professional headshot if available -->
-        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="Yen-Chun Tseng" />
-        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-          <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">Transforming Data Into Actionable Insights</span>
-            <span class="section-heading-lower">Welcome to My Professional Space</span>
-          </h2>
-          <p class="mb-3">
-            With expertise in database administration, data analysis, and machine learning, I help organizations optimize performance and drive innovation.
-          </p>
-          <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="about.html">Learn More About Me</a></div>
-        </div>
+      <div class="cta-inner bg-faded text-center rounded p-5">
+        <h2 class="section-heading mb-5">
+          <span class="section-heading-upper">Let's Connect</span>
+          <span class="section-heading-lower">Reach Out Today</span>
+        </h2>
+        <p class="mb-0">
+          <strong>Email:</strong> <a href="mailto:leo831209@gmail.com">leo831209@gmail.com</a><br />
+          <strong>Phone:</strong> 0938831209
+        </p>
+        <p class="mt-3">
+          <a href="https://www.linkedin.com/in/yenchuntseng/" target="_blank">LinkedIn</a> | 
+          <a href="https://github.com/leo31cm" target="_blank">GitHub</a>
+        </p>
       </div>
     </div>
   </section>
