style and modify2

--- a/experience.html
+++ b/experience.html
@@ -31,8 +31,8 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
           <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Experience</a></li>
-          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Contact</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="experience.html">Experience</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -80,7 +80,7 @@
     </div>
   </section>
   <footer class="footer text-faded text-center py-5">
-    <div class="container"><p class="m-0 small">&copy; 2024 Yen-Chun Tseng</p></div>
+    <div class="container"><p class="m-0 small">&copy; 2025 Yen-Chun Tseng</p></div>
   </footer>
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
