--- a/index.html
+++ b/index.html
@@ -1,113 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="Yen-Chun Tseng's Personal Website" />
-    <meta name="author" content="Yen-Chun Tseng" />
-    <title>Yen-Chun Tseng - DBA & Data Specialist</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
-    <style>
-      /* Simple styling for the game section */
-      #gameSection {
-        width: 100%;
-        height: 400px;
-        background-color: #d0e7f9; /* light blue-gray */
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      #gameCanvas {
-        border: 2px solid #8fa1b3;
-        background-color: #fff;
-      }
-    </style>
-  </head>
-  <body>
-    <!-- Game Section -->
-    <div id="gameSection">
-      <!-- Placeholder game canvas; replace with your actual game -->
-      <canvas id="gameCanvas" width="300" height="300"></canvas>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="Yen-Chun Tseng's Personal Website" />
+  <meta name="author" content="Yen-Chun Tseng" />
+  <title>Yen-Chun Tseng - DBA & Data Specialist</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
+  <!-- Core theme CSS (includes Bootstrap)-->
+  <link href="css/styles.css" rel="stylesheet" />
+</head>
+<body>
+  <header>
+    <h1 class="site-heading text-center text-faded d-none d-lg-block">
+      <span class="site-heading-upper text-primary mb-3">DBA | Data Analysis | Machine Learning</span>
+      <span class="site-heading-lower">Yen-Chun Tseng</span>
+    </h1>
+  </header>
+  <!-- Navigation-->
+  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Yen-Chun Tseng</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="experience.html">Experience</a></li>
+          <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
-
-    <!-- Home Section (original content), hidden initially -->
-    <div id="homeSection" style="display: none;">
-      <header>
-        <h1 class="site-heading text-center text-faded d-none d-lg-block">
-          <span class="site-heading-upper text-primary mb-3">DBA | Data Analysis | Machine Learning</span>
-          <span class="site-heading-lower">Yen-Chun Tseng</span>
-        </h1>
-      </header>
-      <!-- Navigation-->
-      <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
-        <div class="container">
-          <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Yen-Chun Tseng</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-                  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-              <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-              <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="experience.html">Experience</a></li>
-              <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="contact.html">Contact</a></li>
-            </ul>
-          </div>
+  </nav>
+  <!-- Intro Section-->
+  <section class="page-section clearfix">
+    <div class="container">
+      <div class="intro">
+        <!-- Replace the intro image with a professional headshot if available -->
+        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="Yen-Chun Tseng" />
+        <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+          <h2 class="section-heading mb-4">
+            <span class="section-heading-upper">Transforming Data Into Actionable Insights</span>
+            <span class="section-heading-lower">Welcome to My Professional Space</span>
+          </h2>
+          <p class="mb-3">
+            With expertise in database administration, data analysis, and machine learning, I help organizations optimize performance and drive innovation.
+          </p>
+          <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="about.html">Learn More About Me</a></div>
         </div>
-      </nav>
-      <!-- Intro Section-->
-      <section class="page-section clearfix">
-        <div class="container">
-          <div class="intro">
-            <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="Yen-Chun Tseng" />
-            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Transforming Data Into Actionable Insights</span>
-                <span class="section-heading-lower">Welcome to My Professional Space</span>
-              </h2>
-              <p class="mb-3">
-                With expertise in database administration, data analysis, and machine learning, I help organizations optimize performance and drive innovation.
-              </p>
-              <div class="intro-button mx-auto">
-                <a class="btn btn-primary btn-xl" href="about.html">Learn More About Me</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <footer class="footer text-faded text-center py-5">
-        <div class="container">
-          <p class="m-0 small">&copy; 2025 Yen-Chun Tseng</p>
-        </div>
-      </footer>
+      </div>
     </div>
-
-    <!-- Bootstrap core JS-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
-    <script>
-      // Placeholder game code: simulate game completion after 5 seconds
-      setTimeout(function() {
-        // Hide the game section
-        document.getElementById('gameSection').style.display = 'none';
-        // Show the home section
-        document.getElementById('homeSection').style.display = 'block';
-      }, 5000);
-
-      // Example: draw a placeholder message on the canvas (replace with your game logic)
-      const canvas = document.getElementById('gameCanvas');
-      const ctx = canvas.getContext('2d');
-      ctx.fillStyle = "#8fa1b3";
-      ctx.font = "20px Arial";
-      ctx.textAlign = "center";
-      ctx.fillText("Play Game!", canvas.width / 2, canvas.height / 2);
-    </script>
-  </body>
+  </section>
+  <footer class="footer text-faded text-center py-5">
+    <div class="container"><p class="m-0 small">&copy; 2024 Yen-Chun Tseng</p></div>
+  </footer>
+  <!-- Bootstrap core JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Core theme JS-->
+  <script src="js/scripts.js"></script>
+</body>
 </html>
