--- a/experience.html
+++ b/experience.html
@@ -52,9 +52,33 @@
         <div class="experience-item-description d-flex me-auto">
           <div class="bg-faded p-5 rounded">
             <ul>
-              <li>Managed over 20 UAT, DR, and PROD databases ensuring 99.9% uptime.</li>
-              <li>Optimized stored procedure performance by 10%-30% and query execution by 20%.</li>
-              <li>Implemented proactive monitoring with SolarWinds to mitigate risks.</li>
+              <li><strong>Key Responsibilities</strong></li>
+
+<li>Database Operations: Resolved complex incidents in SQL Server environments, offered architectural guidance on T-SQL design, and supported development teams to ensure application stability and responsiveness.</li>
+
+<li>Environment Management: Administered over 20 database environments across UAT, DR, and production tiers, maintaining system reliability with 99.9% uptime.</li>
+
+<li>Performance Optimization: Conducted index optimization, statistics updates, and execution plan analysis; improved system throughput and reduced resource contention.</li>
+
+<li>Deployment & Monitoring: Automated deployment workflows using PowerShell and integrated SolarWinds for proactive monitoring and performance alerts.</li>
+
+<li><strong>Performance Achievements</strong></li>
+
+<li>Improved stored procedure execution time by 10–30% through T-SQL refactoring, query plan tuning, and strategic indexing.</li>
+
+<li>Accelerated query performance by up to 20% by analyzing wait statistics and eliminating I/O bottlenecks.</li>
+
+<li>Reduced operational costs by 15% through process automation and archival optimization; eliminated delays in scheduled data retention tasks.</li>
+
+<li><strong>Technologies Used</strong></li>
+
+<li>Database Platforms: Microsoft SQL Server (2014), SSMS</li>
+
+<li>Scripting & Automation: PowerShell, SQL Server Agent Jobs</li>
+
+<li>Monitoring Tools: SolarWinds Database Performance Analyzer</li>
+
+<li>Core Skills: T-SQL Development, Query Optimization, Index Design, Backup & Recovery, High Availability (Always On), Disaster Recovery Planning</li>
             </ul>
           </div>
         </div>
