--- a/experience.html
+++ b/experience.html
@@ -52,33 +52,33 @@
         <div class="experience-item-description d-flex me-auto">
           <div class="bg-faded p-5 rounded">
             <ul>
-              <li><strong>Key Responsibilities</strong></li>
+              <p><strong>Key Responsibilities</strong></p>
 
-<li>Database Operations: Resolved complex incidents in SQL Server environments, offered architectural guidance on T-SQL design, and supported development teams to ensure application stability and responsiveness.</li>
-
-<li>Environment Management: Administered over 20 database environments across UAT, DR, and production tiers, maintaining system reliability with 99.9% uptime.</li>
-
-<li>Performance Optimization: Conducted index optimization, statistics updates, and execution plan analysis; improved system throughput and reduced resource contention.</li>
-
-<li>Deployment & Monitoring: Automated deployment workflows using PowerShell and integrated SolarWinds for proactive monitoring and performance alerts.</li>
-
-<li><strong>Performance Achievements</strong></li>
-
-<li>Improved stored procedure execution time by 10–30% through T-SQL refactoring, query plan tuning, and strategic indexing.</li>
-
-<li>Accelerated query performance by up to 20% by analyzing wait statistics and eliminating I/O bottlenecks.</li>
-
-<li>Reduced operational costs by 15% through process automation and archival optimization; eliminated delays in scheduled data retention tasks.</li>
-
-<li><strong>Technologies Used</strong></li>
-
-<li>Database Platforms: Microsoft SQL Server (2014), SSMS</li>
-
-<li>Scripting & Automation: PowerShell, SQL Server Agent Jobs</li>
-
-<li>Monitoring Tools: SolarWinds Database Performance Analyzer</li>
-
-<li>Core Skills: T-SQL Development, Query Optimization, Index Design, Backup & Recovery, High Availability (Always On), Disaster Recovery Planning</li>
+			<li>Database Operations: Resolved complex incidents in SQL Server environments, offered architectural guidance on T-SQL design, and supported development teams to ensure application stability and responsiveness.</li>
+			
+			<li>Environment Management: Administered over 20 database environments across UAT, DR, and production tiers, maintaining system reliability with 99.9% uptime.</li>
+			
+			<li>Performance Optimization: Conducted index optimization, statistics updates, and execution plan analysis; improved system throughput and reduced resource contention.</li>
+			
+			<li>Deployment & Monitoring: Automated deployment workflows using PowerShell and integrated SolarWinds for proactive monitoring and performance alerts.</li>
+			
+			<p><strong>Performance Achievements</strong></p>
+			
+			<li>Improved stored procedure execution time by 10–30% through T-SQL refactoring, query plan tuning, and strategic indexing.</li>
+			
+			<li>Accelerated query performance by up to 20% by analyzing wait statistics and eliminating I/O bottlenecks.</li>
+			
+			<li>Reduced operational costs by 15% through process automation and archival optimization; eliminated delays in scheduled data retention tasks.</li>
+			
+			<p><strong>Technologies Used</strong></p>
+			
+			<li>Database Platforms: Microsoft SQL Server (2014), SSMS</li>
+			
+			<li>Scripting & Automation: PowerShell, SQL Server Agent Jobs</li>
+			
+			<li>Monitoring Tools: SolarWinds Database Performance Analyzer</li>
+			
+			<li>Core Skills: T-SQL Development, Query Optimization, Index Design, Backup & Recovery, High Availability (Always On), Disaster Recovery Planning</li>
             </ul>
           </div>
         </div>
@@ -98,6 +98,12 @@
             <p>
               Leveraged schema.org markup and machine learning techniques (RandomForest, LGBMClassifier) to predict hotel ratings based on amenities and features.
             </p>
+			<p><strong>Skill use</strong></p>
+			<li><strong>Web Data Extraction & Semantic Web:</strong> Utilized structured data from <strong>schema.org</strong> markup for semantic content analysis.</li>
+			<li><strong>Data Preprocessing:</strong> Applied advanced data cleaning, transformation, and feature engineering using <strong>pandas</strong> and <strong>scikit-learn</strong>.</li>
+			<li><strong>Machine Learning Algorithms:</strong> Implemented and compared <strong>Random Forest</strong> and <strong>LightGBM (LGBMClassifier)</strong> models for supervised learning tasks.
+			<li><strong>Model Optimization:</strong> Performed <strong>k-fold cross-validation</strong> for hyperparameter tuning and generalization performance.
+			<li><strong>Python Programming:</strong> Developed end-to-end machine learning pipelines using <strong>Python</strong>.
           </div>
         </div>
       </div>
