--- a/experience.html
+++ b/experience.html
@@ -101,9 +101,9 @@
 			<p><strong>Skill use</strong></p>
 			<li><strong>Web Data Extraction & Semantic Web:</strong> Utilized structured data from <strong>schema.org</strong> markup for semantic content analysis.</li>
 			<li><strong>Data Preprocessing:</strong> Applied advanced data cleaning, transformation, and feature engineering using <strong>pandas</strong> and <strong>scikit-learn</strong>.</li>
-			<li><strong>Machine Learning Algorithms:</strong> Implemented and compared <strong>Random Forest</strong> and <strong>LightGBM (LGBMClassifier)</strong> models for supervised learning tasks.
-			<li><strong>Model Optimization:</strong> Performed <strong>k-fold cross-validation</strong> for hyperparameter tuning and generalization performance.
-			<li><strong>Python Programming:</strong> Developed end-to-end machine learning pipelines using <strong>Python</strong>.
+			<li><strong>Machine Learning Algorithms:</strong> Implemented and compared <strong>Random Forest</strong> and <strong>LightGBM (LGBMClassifier)</strong> models.</li>
+			<li><strong>Model Optimization:</strong> Performed <strong>k-fold cross-validation</strong> for hyperparameter tuning and generalization performance.</li>
+			<li><strong>Python Programming:</strong> Developed end-to-end machine learning pipelines using <strong>Python</strong>.</li>
           </div>
         </div>
       </div>
