--- a/experience.html
+++ b/experience.html
@@ -52,7 +52,10 @@
         <div class="experience-item-description d-flex me-auto">
           <div class="bg-faded p-5 rounded">
             <ul>
-              <p><strong>Key Responsibilities</strong></p>
+			
+            <p>
+			<strong>Key Responsibilities</strong>
+			</p>
 
 			<li>Database Operations: Resolved complex incidents in SQL Server environments, offered architectural guidance on T-SQL design, and supported development teams to ensure application stability and responsiveness.</li>
 			
@@ -62,7 +65,9 @@
 			
 			<li>Deployment & Monitoring: Automated deployment workflows using PowerShell and integrated SolarWinds for proactive monitoring and performance alerts.</li>
 			
-			<p><strong>Performance Achievements</strong></p>
+			<p>
+			<strong>Performance Achievements</strong>
+			</p>
 			
 			<li>Improved stored procedure execution time by 10–30% through T-SQL refactoring, query plan tuning, and strategic indexing.</li>
 			
@@ -70,7 +75,9 @@
 			
 			<li>Reduced operational costs by 15% through process automation and archival optimization; eliminated delays in scheduled data retention tasks.</li>
 			
-			<p><strong>Technologies Used</strong></p>
+			<p>
+			<strong>Technologies Used</strong>
+			</p>
 			
 			<li>Database Platforms: Microsoft SQL Server (2014), SSMS</li>
 			
