--- a/experience.html
+++ b/experience.html
@@ -53,7 +53,7 @@
           <div class="bg-faded p-5 rounded">
             <ul>
 			
-            <p>
+            <p class="mt-1">
 			<strong>Key Responsibilities</strong>
 			</p>
 
@@ -65,7 +65,7 @@
 			
 			<li>Deployment & Monitoring: Automated deployment workflows using PowerShell and integrated SolarWinds for proactive monitoring and performance alerts.</li>
 			<p> </p>
-			<p>
+			<p class="mt-1">
 			<strong>Performance Achievements</strong>
 			</p>
 			
@@ -75,7 +75,7 @@
 			
 			<li>Reduced operational costs by 15% through process automation and archival optimization; eliminated delays in scheduled data retention tasks.</li>
 			<p> </p>
-			<p>
+			<p class="mt-1">
 			<strong>Technologies Used</strong>
 			</p>
 			
