--- a/about.html
+++ b/about.html
@@ -49,14 +49,14 @@
                 <span class="section-heading-lower">My Story</span>
               </h2>
               <p>
-                I hold a Master of Business Informatics from Mannheim University and a B.B.A in Information Systems Management from National Sun Yat-Sen University. I specialize in database administration, performance optimization, and leveraging data analysis to drive business improvements.
+                I hold a <strong>Master of Business Informatics</strong> from <strong>Mannheim University</strong> and a B.B.A in <strong>Information Systems Management</strong> from <strong>National Sun Yat-Sen University</strong>. I specialize in database administration, performance optimization, and leveraging data analysis to drive business improvements.
               </p>
               <p class="mb-3">
                 My career journey has led me to roles such as DBA at BurkesTech in Taipei, where I honed my skills in optimizing database performance and managing complex systems.
               </p>
 			  <p> </p>
 			  <p class="mb-1">
-				Outside of tech, I love sports, movies, and music—especially Quentin Tarantino films, which never fail to fascinate me. I'm passionate about exploring the potential of data and enjoy working with teams to solve technical challenges. My goal is to keep growing in the field of data engineering and create meaningful impact through data!
+				Outside of tech, I love sports, movies, and music — especially Quentin Tarantino films, which never fail to fascinate me. I'm passionate about exploring the potential of data and enjoy working with teams to solve technical challenges. My goal is to keep growing in the field of data science and create meaningful impact through data!
 			  </p>
             </div>
           </div>
