--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <!-- Google fonts-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Moo+Lah+Lah&display=swap" rel="stylesheet">
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -44,7 +46,7 @@
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Transforming Data Into Actionable Insights</span>
-            <span class="section-heading-lower">Welcome to My Space</span>
+            <span class="moo-lah-lah-regular">Welcome to My Space</span>
           </h2>
           <p class="mb-3">
             With expertise in database administration, data analysis, and machine learning, I help organizations optimize performance and drive innovation.
