--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Transforming Data Into Actionable Insights</span>
-            <span class="moo-lah-lah-regular">Welcome to My Space</span>
+            <span class="moo-lah-lah-regular">Welcome to My World</span>
           </h2>
           <p class="mb-3">
             With expertise in database administration, data analysis, and machine learning, I help organizations optimize performance and drive innovation.
