--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Moo+Lah+Lah&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Just+Me+Again+Down+Here&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
 </head>
@@ -45,7 +46,7 @@
       <div class="cta-inner bg-faded text-center rounded p-5">
         <h2 class="section-heading mb-5">
           <span class="section-heading-upper">Let's Connect</span>
-          <span class="section-heading-lower">Reach Out Today</span>
+          <span class="just-me-again-down-here-regular">Reach Out Today</span>
         </h2>
         <p class="mb-0">
           <strong>Email:</strong> <a href="mailto:leo831209@gmail.com">leo831209@gmail.com</a><br />
