--- a/index.html
+++ b/index.html
@@ -56,6 +56,25 @@
       </div>
     </div>
   </section>
+  <div class="player">
+  <audio id="audio" preload="auto">
+    <source src="music.mp3" type="assets/meow-meow-give-me-milk.mp3">
+  </audio>
+
+  <div class="controls">
+    <div class="play-container">
+      <div class="toggle-play play" id="playPauseBtn"></div>
+    </div>
+    <div class="time">
+      <span id="current">0:00</span>
+      <div class="bar" id="progressContainer">
+        <div class="progress" id="progress"></div>
+      </div>
+      <span id="duration">0:00</span>
+    </div>
+  </div>
+</div>
+
   <footer class="footer text-faded text-center py-5">
     <div class="container"><p class="m-0 small">&copy; 2025 Yen-Chun Tseng</p></div>
   </footer>
