--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
   </section>
-  <div class="player">
+<!--   <div class="player">
   <audio id="audio" preload="auto">
     <source src="music.mp3" type="assets/meow-meow-give-me-milk.mp3">
   </audio>
@@ -73,7 +73,7 @@
       <span id="duration">0:00</span>
     </div>
   </div>
-</div>
+</div> -->
 
   <footer class="footer text-faded text-center py-5">
     <div class="container"><p class="m-0 small">&copy; 2025 Yen-Chun Tseng</p></div>
